--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Rahul Kumawat</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
       <header id="header">
          <div class="container">
             <a href="#" class="logo">
-                <img src="./images/logo.png" alt="" class="img-fluid logoimg">
+                <img src="./images/DocScanner 18-May-2024 2-45 pm.jpg" alt="" class="img-fluid logoimg">
             </a>
             <ul class="menu">
                 <li class="menu_item">
@@ -27,7 +27,7 @@
                     <a href="#resume" class="menu_link">Resume</a>
                 </li>
                 <li class="menu_item">
-                    <a href="#porfolio" class="menu_link">Protfolio</a>
+                    <a href="#porfolio" class="menu_link">portfolio</a>
                 </li>
                 <li class="menu_item">
                     <a href="#contact" class="menu_link">contact</a>
@@ -51,7 +51,7 @@
                         <a href="https://www.linkedin.com/in/rahul-kumawat-5968a8209/"><ion-icon name="logo-linkedin"></ion-icon></a>
                         <a href="https://github.com/rk-universe"><ion-icon name="logo-github"></ion-icon></a>
                         <a href="https://leetcode.com/u/rk-universe/"><ion-icon name="code-slash-outline"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                        <a href="https://www.instagram.com/rahul_2.02/"><ion-icon name="logo-instagram"></ion-icon></a>
                     </div>
                     <a href="#about" class="btn">
                         Read More
@@ -315,7 +315,7 @@
                         </div>
                         <div class="por_links">
                             <a href="https://github.com/rk-universe/ImageInfy/tree/main" class="btn">Github</a>
-                            <a href="#" class="btn">Live Demo</a>
+                            <a href="#" class="btn live_demo">Live Demo</a>
                         </div>
 
                     </div>
@@ -328,14 +328,15 @@
                                 The Pix2Pix GAN is a deep learning architecture used for various image-to-image translation tasks.</p>
                         </div>
                         <div class="por_links">
-                            <a href="#" class="btn">Github</a>
-                            <a href="#" class="btn">Live Demo</a>
+                            <a href="https://github.com/rk-universe/Gray-to-Color-Image-Translation/tree/main" class="btn">Github</a>
+                            <a href="#" class="btn live_demo">Live Demo</a>
                         </div>
 
                     </div>
 
                     <div class="Por_card">
                         <img src="./images/pro3.png" alt="" class="img-fluid">
+                        <!-- <a href="#" class="pro_in_img"> view in github</a> -->
                         <div class="por_texts">
                             <h4>Shayari Generator Model (LSTM)</h4>
                             <p>This project is all about generating beautiful and expressive Shayari using Long Short-Term Memory (LSTM) neural networks.
@@ -343,8 +344,8 @@
                             </p>
                         </div>
                         <div class="por_links">
-                            <a href="#" class="btn">Github</a>
-                            <a href="#" class="btn">Live Demo</a>
+                            <a href="https://github.com/rk-universe/Shayari_generation_using_LSTM" class="btn">Github</a>
+                            <a href="#" class="btn live_demo" >Live Demo</a>
                         </div>
 
                     </div>
@@ -358,7 +359,7 @@
                         </div>
                         <div class="por_links">
                             <a href="https://github.com/rk-universe/fund-collector" class="btn">Github</a>
-                            <a href="#" class="btn">Live Demo</a>
+                            <a href="#" class="btn live_demo">Live Demo</a>
                         </div>
 
                     </div>
@@ -370,7 +371,7 @@
                         </div>
                         <div class="por_links">
                             <a href="https://github.com/rk-universe/SendFileByQr/tree/main" class="btn">Github</a>
-                            <a href="#" class="btn">Live Demo</a>
+                            <a href="#" class="btn live_demo">Live Demo</a>
                         </div>
 
                     </div>
@@ -382,7 +383,7 @@
                         </div>
                         <div class="por_links">
                             <a href="https://github.com/rk-universe/whatsapp-Clone/tree/main" class="btn">Github</a>
-                            <a href="#" class="btn">Live Demo</a>
+                            <a href="#" class="btn live_demo">Live Demo</a>
                         </div>
 
                     </div>
