--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </a>
                 </div>
                 <div class="hero_img">
-                    <img src="./images/heor6.png" alt="" class="aboutimg">
+                    <img src="./images/photo5.png" alt="" class="aboutimg">
                 </div>
             </div>
         </section>
