--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <p>I'm a continuous learner, actively <b style="color: #ff7b00ea;">contributing to open-source projects</b> and engaging with online coding communities (GitHub, LeetCode, HackerRank, CodeChef). I'm also an <b style="color: #ff7b00ea;">active member of the AWS Emerging Talent Community</b> and have completed Google Cloud milestones, demonstrating my commitment to staying ahead of the curve.</p>
                              
                              <div class="about_info">
-                        <a href="https://drive.google.com/file/d/1994hulQskPwKxFOl0f2NMjd1r7w4o-0P/view?usp=drivesdk" class="btn">
+                        <a href="https://drive.google.com/file/d/1B6nkZwdyZqMayVxpeTvcDsZCwCZjH9rz/view?usp=sharing" class="btn">
                            Download CV
             
                        </a>
